--- a/public/checklist-ilsung/overview.css
+++ b/public/checklist-ilsung/overview.css
@@ -13,7 +13,6 @@
     justify-content: center;
 }
 
-
 .progress.red .progress-value {
     background: #ec4251;
 }
@@ -66,6 +65,7 @@
     opacity: 1;
 }
 
+
 /* .sidebar {
     position: -webkit-sticky;
     position: sticky;
@@ -91,11 +91,14 @@
     min-height: 100vh;
 } */
 
-.cat-sub-menu.visible a:hover, .sidebar-body-menu a.active, .sidebar-body-menu a.active::after, .sidebar-body-menu a:hover, .sidebar-body-menu a:hover::after {
+.cat-sub-menu.visible a:hover,
+.sidebar-body-menu a.active,
+.sidebar-body-menu a.active::after,
+.sidebar-body-menu a:hover,
+.sidebar-body-menu a:hover::after {
     opacity: 1;
     color: greenyellow;
 }
-
 
 .progress {
     height: 40px;
@@ -119,7 +122,6 @@
     border-radius: 3px;
     font-weight: 600;
     width: 50px;
-
 }
 
 .progress .progressbar-title {
@@ -144,14 +146,16 @@
     }
 }
 
-#myTab, #study-Tab {
+#myTab,
+#study-Tab {
     column-gap: 10px;
     border-bottom: 0;
     justify-content: center;
     padding: 20px 0 0 0;
 }
 
-#myTab li .nav-link, #study-Tab li .nav-link {
+#myTab li .nav-link,
+#study-Tab li .nav-link {
     color: #000;
     background-color: #cfcfcf;
     border-radius: 10px;
@@ -165,12 +169,12 @@
     justify-content: center;
 }
 
-
 #table-check-list thead tr:nth-child(2) {
     display: none !important;
 }
 
-#table-check-list tbody tr, #table-check-list tbody td {
+#table-check-list tbody tr,
+#table-check-list tbody td {
     padding: 4px 10px;
     border: 1px solid #5c5656;
     vertical-align: middle;
@@ -266,7 +270,6 @@
 
 .fc-right .fc-button-group {
     display: none !important;
-
 }
 
 .toast-center {
@@ -276,37 +279,226 @@
     position: fixed;
 }
 
-
 .dataTables_wrapper .dataTables_paginate .paginate_button {
     padding: 0 !important;
-
 }
 
 #table-result thead tr th,
 #table-result tbody tr td {
     text-align: center;
-
 }
-
 
 #table-result thead tr th:last-child {
     width: 10%;
-
 }
 
 #table-result thead tr th:first-child {
     width: 5%;
-
 }
 
 #table-result_wrapper .dataTables_length,
 #table-result_wrapper .dataTables_filter {
-
     margin-bottom: 10px;
 }
 
 #check-list .card-header {
     display: flex;
     justify-content: space-between;
+}
 
+.truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    font-size: smaller;
+    font-style: italic;
+}
+
+.truncate-1 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+.modal-dialog.large {
+    width: 80% !important;
+    max-width: unset;
+}
+
+.modal-dialog.mid-large {
+    width: 50% !important;
+    max-width: unset;
+}
+
+@media (max-width:900px) {
+    .modal-dialog.large {
+        width: 100% !important;
+        max-width: unset;
+    }
+    .modal-dialog.mid-large {
+        width: 100% !important;
+        max-width: unset;
+    }
+    .modal-dialog {
+        margin: unset !important;
+    }
+}
+
+#viewer_modal .btn-close {
+    position: absolute;
+    z-index: 999999;
+    /*right: -4.5em;*/
+    background: unset;
+    color: white;
+    border: unset;
+    font-size: 27px;
+    top: 0;
+}
+
+#viewer_modal .modal-dialog {
+    width: 80%;
+    max-width: unset;
+    height: calc(90%);
+    max-height: unset;
+}
+
+#viewer_modal .modal-content {
+    background: black;
+    border: unset;
+    height: calc(100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#viewer_modal img,
+#viewer_modal video {
+    max-height: calc(100%);
+    max-width: calc(100%);
+}
+
+table.dataTable th,
+table.dataTable td {
+    padding: 5px !important;
+}
+
+.card.d-flex {
+    flex-direction: row !important;
+}
+
+.card.d-flex>img {
+    width: 20% !important;
+}
+
+.card.d-flex>.card-body {
+    width: 80% !important;
+}
+
+span.btn {
+    cursor: unset;
+}
+
+span.btn:hover {
+    background: inherit;
+}
+
+#tourCarousel {
+    height: 50vh !important;
+}
+
+#tourCarousel img {
+    object-fit: fill;
+}
+
+div.stars {
+    width: auto;
+    display: inline-block
+}
+
+.mt-200 {
+    margin-top: 200px
+}
+
+input.star {
+    display: none
+}
+
+label.star {
+    float: right;
+    /* padding: 10px; */
+    font-size: 30px;
+    color: #333333;
+    transition: all .2s
+}
+
+input.star:checked~label.star:before {
+    content: '\2605';
+    color: #ffc800;
+    transition: all .25s
+}
+
+input.star-5:checked~label.star:before {
+    color: #ffc800;
+    /* text-shadow: 0 0 20px #952 */
+}
+
+input.star-1:checked~label.star:before {
+    color: #F62
+}
+
+label.star:hover {
+    transform: rotate(-15deg) scale(1.3)
+}
+
+label.star:before {
+    content: '\2605';
+    font-family: FontAwesome
+}
+
+#top-header {
+    height: 70vh;
+}
+
+#top-header * {
+    text-shadow: 3px 2px #000000b0;
+}
+
+#top-header .title {
+    font-size: 5em;
+    text-shadow: 4px 4px #000000f5;
+}
+
+#top-header:before {
+    content: '';
+    position: absolute;
+    height: 80vh;
+    width: calc(100%);
+    top: 0;
+    left: 0;
+    background-image: var(--bg-img) !important;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    z-index: 0;
+    filter: brightness(.95)
+}
+
+.company-name {
+    font-size: 1.35rem;
+    font-variant: all-petite-caps;
+    font-family: monospace;
+    font-weight: 600;
+    color: #b5b5b5;
+}
+
+img.company-logo {
+    transition: transform .02s ease-in;
+}
+
+img.company-logo:hover {
+    transform: scale(1.02);
 }
