--- a/public/checklist-ilsung/overview.css
+++ b/public/checklist-ilsung/overview.css
@@ -502,3 +502,8 @@ img.company-logo {
 img.company-logo:hover {
     transform: scale(1.02);
 }
+
+#add-product {
+    margin-top: 1.4rem;
+    cbt
+}
