--- a/public/checklist-ilsung/overview.css
+++ b/public/checklist-ilsung/overview.css
@@ -868,7 +868,7 @@ button:hover {
     /* background-color: #fff; */
     color: #fff;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    width: 80vh;
+    width: 20vw;
 }
 
 
