--- a/public/checklist-ilsung/css/OQC.css
+++ b/public/checklist-ilsung/css/OQC.css
@@ -65,7 +65,6 @@
     opacity: 1;
 }
 
-
 /* .sidebar {
     position: -webkit-sticky;
     position: sticky;
@@ -246,7 +245,7 @@
 }
 
 .form-control {
-    border: 1px solid #ced4da ! IMPORTANT;
+    border: 1px solid #ced4da !important;
     border-radius: 0.5rem;
 }
 
@@ -256,7 +255,7 @@
 }
 
 .content-inner {
-    padding: calc(var(--bs-gutter-x, 0.4rem)* 3);
+    padding: calc(var(--bs-gutter-x, 0.4rem) * 3);
 }
 
 .nav .search-input {
@@ -334,7 +333,7 @@
     max-width: unset;
 }
 
-@media (max-width:900px) {
+@media (max-width: 900px) {
     .modal-dialog.large {
         width: 100% !important;
         max-width: unset;
@@ -390,11 +389,11 @@ table.dataTable td {
     flex-direction: row !important;
 }
 
-.card.d-flex>img {
+.card.d-flex > img {
     width: 20% !important;
 }
 
-.card.d-flex>.card-body {
+.card.d-flex > .card-body {
     width: 80% !important;
 }
 
@@ -416,15 +415,15 @@ span.btn:hover {
 
 div.stars {
     width: auto;
-    display: inline-block
+    display: inline-block;
 }
 
 .mt-200 {
-    margin-top: 200px
+    margin-top: 200px;
 }
 
 input.star {
-    display: none
+    display: none;
 }
 
 label.star {
@@ -432,31 +431,31 @@ label.star {
     /* padding: 10px; */
     font-size: 30px;
     color: #333333;
-    transition: all .2s
+    transition: all 0.2s;
 }
 
-input.star:checked~label.star:before {
-    content: '\2605';
+input.star:checked ~ label.star:before {
+    content: "\2605";
     color: #ffc800;
-    transition: all .25s
+    transition: all 0.25s;
 }
 
-input.star-5:checked~label.star:before {
+input.star-5:checked ~ label.star:before {
     color: #ffc800;
     /* text-shadow: 0 0 20px #952 */
 }
 
-input.star-1:checked~label.star:before {
-    color: #F62
+input.star-1:checked ~ label.star:before {
+    color: #f62;
 }
 
 label.star:hover {
-    transform: rotate(-15deg) scale(1.3)
+    transform: rotate(-15deg) scale(1.3);
 }
 
 label.star:before {
-    content: '\2605';
-    font-family: FontAwesome
+    content: "\2605";
+    font-family: FontAwesome;
 }
 
 #top-header {
@@ -473,7 +472,7 @@ label.star:before {
 }
 
 #top-header:before {
-    content: '';
+    content: "";
     position: absolute;
     height: 80vh;
     width: calc(100%);
@@ -484,7 +483,7 @@ label.star:before {
     background-repeat: no-repeat;
     background-position: center center;
     z-index: 0;
-    filter: brightness(.95)
+    filter: brightness(0.95);
 }
 
 .company-name {
@@ -496,7 +495,7 @@ label.star:before {
 }
 
 img.company-logo {
-    transition: transform .02s ease-in;
+    transition: transform 0.02s ease-in;
 }
 
 img.company-logo:hover {
@@ -515,17 +514,23 @@ img.company-logo:hover {
     border-radius: 0.5rem !important;
 }
 
-.select2-container--default .select2-selection--single .select2-selection__placeholder {
+.select2-container--default
+    .select2-selection--single
+    .select2-selection__placeholder {
     color: #999;
     line-height: 40px;
     font-size: 16px;
 }
 
-.select2-container--default .select2-selection--single .select2-selection__arrow {
+.select2-container--default
+    .select2-selection--single
+    .select2-selection__arrow {
     display: none;
 }
 
-.select2-container--default .select2-selection--single .select2-selection__rendered {
+.select2-container--default
+    .select2-selection--single
+    .select2-selection__rendered {
     color: #444;
     line-height: 40px !important;
 }
@@ -540,7 +545,6 @@ img.company-logo:hover {
     transition: background-color 0.3s, color 0.3s;
 }
 
-
 /* Giới hạn chiều cao của modal-body và thêm thanh cuộn */
 
 .modal-body {
@@ -549,7 +553,6 @@ img.company-logo:hover {
     overflow-y: auto;
     /* Thêm thanh cuộn dọc */
 }
-
 
 /* Đảm bảo bảng không bị bóp méo trên màn hình nhỏ */
 
@@ -602,14 +605,14 @@ img.company-logo:hover {
     transition: color 0.3s ease;
 }
 
-.radio-button input:checked+.radio-icon {
+.radio-button input:checked + .radio-icon {
     background: linear-gradient(145deg, #007bff, #0056b3);
     color: #fff;
     box-shadow: inset 4px 4px 8px #0056b3, inset -4px -4px 8px #0094ff;
     border-color: #0056b3;
 }
 
-.radio-button input:checked~.radio-text {
+.radio-button input:checked ~ .radio-text {
     color: #007bff;
 }
 
@@ -645,7 +648,6 @@ img.company-logo:hover {
     align-items: center;
 }
 
-
 /* Card Header Styling */
 
 .card-header {
@@ -662,7 +664,6 @@ img.company-logo:hover {
     /* Khoảng cách ngang giữa nội dung */
 }
 
-
 /* Header Title Styling */
 
 .header-title {
@@ -672,7 +673,6 @@ img.company-logo:hover {
     margin: 0;
     /* Loại bỏ khoảng cách mặc định */
 }
-
 
 /* Button Group Styling */
 
@@ -691,7 +691,6 @@ img.company-logo:hover {
     background-color: rgb(0 135 99);
 }
 
-
 /* General Table Styling */
 
 .table {
@@ -705,7 +704,6 @@ img.company-logo:hover {
     padding: 0.75rem 1rem;
 }
 
-
 /* Padding và căn chỉnh bảng */
 
 .table th,
@@ -717,7 +715,6 @@ img.company-logo:hover {
     vertical-align: middle;
     /* Đặt nội dung giữa ô */
 }
-
 
 /* Giảm kích thước cho bảng trên màn hình nhỏ */
 
@@ -737,14 +734,12 @@ img.company-logo:hover {
     }
 }
 
-
 /* Responsive Table Overflow */
 
 .table-responsive {
     overflow-x: auto;
     /* Cuộn ngang nếu bảng quá rộng */
 }
-
 
 /* Responsive Styling for Buttons */
 
@@ -754,7 +749,6 @@ img.company-logo:hover {
     padding: 4px 8px;
     /* Giảm padding nút */
 }
-
 
 /* Style cho radio buttons */
 
@@ -805,14 +799,12 @@ img.company-logo:hover {
     text-align: center;
 }
 
-
 /* Style cho form select */
 
 .form-select {
     border-radius: 0.375rem;
     padding: 0.5rem 1rem;
 }
-
 
 /* Button actions */
 
@@ -825,14 +817,12 @@ button:hover {
     opacity: 0.85;
 }
 
-
 /* Reset search button */
 
 #reset-search {
     background-color: #f8f9fa;
     border-color: #6c757d;
 }
-
 
 /* Thêm các hiệu ứng hover */
 
@@ -845,9 +835,7 @@ button:hover {
     /* Mượt mà */
 }
 
-
 /* Căn giữa màn hình và container */
-
 
 /* To center content and align the cards properly */
 
@@ -858,7 +846,6 @@ button:hover {
     height: 100vh;
     padding: 0;
 }
-
 
 /* Card container settings */
 
@@ -871,7 +858,6 @@ button:hover {
     width: 20vw;
 }
 
-
 /* Icon container style */
 
 .icon-container {
@@ -881,7 +867,6 @@ button:hover {
     margin-right: 20px;
     transition: transform 0.3s ease;
 }
-
 
 /* Content of the card */
 
@@ -895,7 +880,6 @@ button:hover {
     font-size: 1rem;
     color: #f4f4f4;
 }
-
 
 /* Card colors for each section */
 
@@ -914,7 +898,6 @@ button:hover {
     /* Red */
 }
 
-
 /* Hover effect for cards */
 
 .card.tech-card:hover {
@@ -926,7 +909,6 @@ button:hover {
     transform: scale(1.2);
     /* Increase size of icon */
 }
-
 
 /* Hover color change for icons */
 
@@ -941,7 +923,6 @@ button:hover {
 .card.tech-card:hover .oqc-card .icon-container {
     background-color: #c5313b;
 }
-
 
 /* Styling for smaller devices */
 
@@ -961,7 +942,6 @@ button:hover {
     /* Màu của border có thể tùy chỉnh */
 }
 
-
 /* Cải thiện kiểu dáng của hàng tiêu đề */
 
 .table-success th {
@@ -973,7 +953,6 @@ button:hover {
     /* Border dưới hàng tiêu đề */
 }
 
-
 /* Đảm bảo rằng các ô có colspan cũng có border */
 
 .table-bordered th[colspan],
@@ -981,12 +960,9 @@ button:hover {
     border: 1px solid #dee2e6;
 }
 
-
 /* css OQC */
 
-
 /* CSS Hoàn Thiện và Cải Tiến */
-
 
 /* Section Title */
 
@@ -1000,7 +976,6 @@ button:hover {
     padding-bottom: 5px;
     color: #333;
 }
-
 
 /* Card Layout */
 
@@ -1025,7 +1000,6 @@ button:hover {
     padding: 30px;
 }
 
-
 /* Master Plan & Data Input Section */
 
 .master-plan,
@@ -1047,7 +1021,6 @@ button:hover {
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
 }
 
-
 /* Form Layout */
 
 .content-top {
@@ -1063,7 +1036,6 @@ button:hover {
     border: 1px solid #ddd;
     border-radius: 5px;
 }
-
 
 /* Input & Select Styling */
 
@@ -1089,7 +1061,6 @@ select.form-select:focus {
     box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
 }
 
-
 /* Button Styling */
 
 .btn-primary {
@@ -1113,7 +1084,6 @@ select.form-select:focus {
     background-color: #c82333;
     border-color: #bd2130;
 }
-
 
 /* Table Styling */
 
@@ -1144,7 +1114,6 @@ select.form-select:focus {
     border: 1px solid #dee2e6;
 }
 
-
 /* Action Buttons */
 
 #table-result .btn {
@@ -1153,14 +1122,12 @@ select.form-select:focus {
     margin-right: 5px;
 }
 
-
 /* Modal Form */
 
 .modal-content {
     border-radius: 8px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
 }
-
 
 /* .modal-header {
     background-color: #28a745;
@@ -1173,7 +1140,6 @@ select.form-select:focus {
     gap: 10px;
 }
 
-
 /* Responsive Adjustments */
 
 @media (max-width: 768px) {
@@ -1185,7 +1151,6 @@ select.form-select:focus {
         margin-bottom: 20px;
     }
 }
-
 
 /* Data Loss Detail Section */
 
@@ -1209,10 +1174,9 @@ select.form-select:focus {
     color: #333;
 }
 
-
 /* Search Section */
 
-.data-detail .row>.col-3 {
+.data-detail .row > .col-3 {
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -1238,7 +1202,6 @@ select.form-select:focus {
     border-color: #28a745;
     box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
 }
-
 
 /* Table Section */
 
@@ -1266,7 +1229,6 @@ select.form-select:focus {
     /* border: 1px solid #dee2e6; */
 }
 
-
 /* Action Buttons */
 
 .data-detail #table-result .btn {
@@ -1274,7 +1236,6 @@ select.form-select:focus {
     font-size: 0.875rem;
     margin-right: 5px;
 }
-
 
 /* Responsive Adjustments */
 
@@ -1353,3 +1314,45 @@ thead th {
 .text-dark {
     color: #212529 !important;
 }
+.chart-container {
+    width: 100%; /* Chiều rộng full màn hình */
+    height: 400px; /* Chiều cao 300px */
+    position: relative;
+}
+
+#oqcChart {
+    width: 100% !important; /* Đảm bảo chiều rộng canvas 100% */
+    height: 100% !important; /* Đảm bảo chiều cao canvas 100% */
+}
+
+/* Thêm quy tắc CSS để tạo cuộn cho bảng khi dữ liệu vượt quá chiều cao */
+#oqcTable_wrapper {
+    overflow-y: auto;
+}
+
+.table-sumary {
+    width: 100%;
+    max-height: 500px;
+    overflow-y: auto;
+    margin-bottom: 30px;
+}
+
+#oqcTable thead tr th {
+    position: sticky;
+    top: 0; /* Cố định ở đầu của bảng */
+    /* background-color: #fff; Đảm bảo nền của header không bị ảnh hưởng bởi các dòng dưới */
+    z-index: 1; /* Đảm bảo rằng header luôn ở trên các dòng */
+    text-align: center; /* Căn giữa nội dung trong các header */
+}
+
+#oqcTable {
+    display: block;
+    /* overflow-x: auto; */
+    overflow-y: auto;
+    max-height: 400px; /* Hoặc điều chỉnh kích thước phù hợp */
+}
+
+/* Nếu muốn có viền bên dưới cho header */
+/* #oqcTable thead {
+    border-bottom: 2px solid #ccc;
+} */
