--- a/public/checklist-ilsung/css/OQC.css
+++ b/public/checklist-ilsung/css/OQC.css
@@ -1356,3 +1356,15 @@ thead th {
 /* #oqcTable thead {
     border-bottom: 2px solid #ccc;
 } */
+
+#oqcChart {
+    /* background: linear-gradient(145deg, #2b2b2b, #4e4e4e); */
+    border-radius: 10px; /* Bo góc để mềm mại hơn */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Thêm hiệu ứng đổ bóng cho canvas */
+    width: 100%;
+    height: 500px; /* Đặt chiều cao của biểu đồ */
+}
+
+canvas {
+    border-radius: 10px;
+}
