--- a/public/checklist-ilsung/overview.css
+++ b/public/checklist-ilsung/overview.css
@@ -1195,8 +1195,7 @@ canvas {
 }
 
 #table-history-detail_wrapper .dt-buttons .buttons-excel:hover,
-#table-result-stock_wrapper .dt-buttons .buttons-excel:hover 
-    {
+#table-result-stock_wrapper .dt-buttons .buttons-excel:hover {
     background-color: #45a049; /* Màu xanh đậm hơn khi hover */
 }
 
@@ -1231,4 +1230,104 @@ canvas {
 
 .component-datepicker.input-group {
     flex-wrap: nowrap;
+}
+
+/* Master Plan & Data Input Section */
+
+.master-plan,
+.data-loi-input {
+    border: 1px solid #dee2e6;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    margin-bottom: 20px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+.data-detail {
+    border: 1px solid #dee2e6;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    margin-bottom: 20px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Form Layout */
+
+.content-top {
+    display: flex;
+    gap: 20px;
+    align-items: flex-start;
+}
+
+.master-plan {
+    flex: 0.5;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.data-loi-input {
+    flex: 1;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+/* Section Title */
+
+.card .section-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+    border-bottom: 2px solid #28a745;
+    display: inline-block;
+    padding-bottom: 5px;
+    color: #333;
+}
+
+/* Card Layout */
+
+.card-loss {
+    border: none;
+    border-radius: 8px;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card-header {
+    background-color: #28a745;
+    color: #fff;
+    font-weight: bold;
+    padding: 15px;
+    border-bottom: 2px solid #28a745;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.card-body {
+    padding: 30px;
+}
+
+#button-save {
+    margin-top: 70px;
+    display: flex;
+    gap: 10px;
+    justify-content: end;
+}
+
+.btn-success {
+    background-color: #28a745;
+    border: none;
+    color: white;
+    transition: background-color 0.3s;
+}
+
+.btn-success:hover {
+    background-color: #218838;
+    color: white;
 }
