--- a/public/checklist-ilsung/overview.css
+++ b/public/checklist-ilsung/overview.css
@@ -650,20 +650,6 @@ img.company-logo:hover {
 
 /* Card Header Styling */
 
-.card-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* Căn giữa nội dung theo chiều dọc */
-    background: linear-gradient(90deg, #1e3a8a, #4f46e5);
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    color: white;
-    height: 80px;
-    /* Đặt chiều cao cố định */
-    padding: 0 20px;
-    /* Khoảng cách ngang giữa nội dung */
-}
-
 /* Header Title Styling */
 
 .header-title {
@@ -773,15 +759,8 @@ img.company-logo:hover {
     font-weight: 500;
 }
 
-.card-header {
-    background: linear-gradient(90deg, #1e3a8a, #4f46e5);
-    color: white;
-    padding: 1.25rem;
-    font-size: 1.25rem;
-}
-
 .card-body {
-    padding: 1.25rem 0.5rem;
+    padding: 1.25rem 1rem;
 }
 
 .table-result th,
@@ -1031,11 +1010,6 @@ canvas {
     cursor: pointer; /* Con trỏ chuột thay đổi khi hover */
 }
 
-/* Căn chỉnh chung */
-.container-fluid {
-    background-color: #f9f9f9; /* Màu nền nhạt cho giao diện */
-}
-
 .home_index .card {
     border: none;
     border-radius: 10px;
@@ -1245,6 +1219,25 @@ canvas {
     height: 630px;
 }
 
+.master-data .card-body {
+    border: 1px solid #dee2e6;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    margin-bottom: 20px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+.master-data .card-body .text-end {
+    color: #000000;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.master-data .card-body .counter {
+    color: #4b9dff;
+    font-size: 26px;
+}
+
 .data-detail {
     border: 1px solid #dee2e6;
     padding: 20px;
@@ -1309,18 +1302,20 @@ canvas {
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
 }
 
-.card-header {
-    background-color: #28a745;
-    color: #fff;
-    font-weight: bold;
-    padding: 15px;
-    border-bottom: 2px solid #28a745;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+.form-card .card-header {
+    padding: 20px 0 5px 20px;
+    background: linear-gradient(90deg, #1e3a8a, #4f46e5);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.card-body {
-    padding: 30px;
+.form-card .card-header h3 {
+    font-weight: bold;
+    font-size: 22px;
+    color: white;
+}
+
+.form-card{
+ margin-bottom: 0 !important;
 }
 
 #button-save {
@@ -1361,4 +1356,15 @@ img#cimg {
     color: white;
     font-size: 12px;
     font-weight: bold;
+}
+
+.header-nhap-xuat {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 20px !important;
+}
+
+.footer {
+    padding-left: 16.2rem !important;
 }
